templates/SERVICE_TEMPLATE/Service-with+ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cluster-one
  labels:
    label-key1: label-value1
spec:
  rules:
    - host: service1.zack.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: service-gateway-app1
                port:
                   number: 8080
